2013-09-22  Per Bothner  <per@bothner.com>

	* rnrs/programs.scm (command-line): Also check kawa.command.line
	property and ApplicationMainSupport:commandName variable when
	trying to figure out command name.

2013-09-20  Per Bothner  <per@bothner.com>

	* numbers.scm (infinite?): Change to match R7RS specification.

2013-09-18  Per Bothner  <per@bothner.com>

	* rnrs/programs.scm (command-line): More accurate/informative
	first argument.

2013-09-06  Per Bothner  <per@bothner.com>

	* strings.scm (define-compare): New non-exported helper macro.
	Use it to generalize various compare functions to varargs.
	(string=?, string<?, string>?, string<=?, string>=?): Re-implement.
	(string-ci=?, string-ci<?, string-ci>?, string-ci<=?, string-ci>=?,
	char-ci=?, char-ci<?, char-ci>?, char-ci<=?, char-ci>=?):
	Moved from unicode.scm and re-implement using define-compare.
	(char=,? char<? char>?, char<=?, char>=?): Moved from
	characters.scm and re-imlement.
	* unicode.scm (string-ci=?, string-ci<?, string-ci>?, string-ci<=?,
	string-ci>=?, char-ci=?, char-ci<?, char-ci>?, char-ci<=?,
	char-ci>=?): Moved to strings.scm, because of define-compare.
	* characters.scm (char=,? char<? char>?, char<=?, char>=?):
	Moved to strings.scm, because of define-compare.

	* characters.scm (digit-value): New function.
	* system.scm (get-environment-variable, get-environment-variables):
	New functions.

2013-09-06  Per Bothner  <per@bothner.com>
	    Alex Shinn

	* numbers.scm (exact-integer-sqrt): Import
	fixed algorithm from chibi-scheme.

2013-09-06  Per Bothner  <per@bothner.com>

	* ports.scm (display, write, write-simple, write-shared,
	write-with-shared-structure): Re-implement for R7RS write semantics.

2013-09-05  Per Bothner  <per@bothner.com>

	* bytevectors.scm ($make$bytevector$): New helper function
	for bytevector constructor function.
	(make-bytevector): Need to use U8Vector directly,
	instead of bytevector varargs constructor.
